	* [import]
		* Templates for ASCII and Binary import filters - allow to save and load current filter settings
		* Support data import from ODS (Open Document Spreadsheet) files
		* When importing tables from SQL databases, allow to specify which data region to read (start/end values for columns and records)
		* Addeded seaborn's datasets to the collection of datasets
		* OPJ:
			* Properly import projects having graphs with multiple axes (BUG 476355)
			* correctly import font sizes and legend fixes (#839)
			* improved text and legend label and positioning
			* import histogram and error bars

Performance improvements:
	* Make baseline removal much faster by using Eigen3 library (optional dependency)
	* Refactor formula parsing including better error handling

Bug fixes:
	* Set mousemode to selection when leaving the plot (Issue #614)
	* Fix plot range field not being updated (Issue #603)
	* Fix wrong axis tick type used (Issue #571)
	* Fix wrong infoelement position when removing active curve (Issue #666)
	* Fix copying Elements (Issue #622)
	* Fix calculating skewness and kurtosis
	* Support start/end row/column in XLSX import preview
	* Fixed wrong string to load CANSettings
	* Don't draw any border line for the worksheet canvas (BUG 470625)

Internal:
	* Switch from C++11 to C++17
	* Support Qt6
	* Reduce code duplication caused by multiple plot types (Issue #540)
	* Update included QXlsx to 1.4.6
	* Build separate libraries for backend, nsl and everything and link
	only when needed in tests
	* Log skipped tests

-----2.10.1 (12.07.2023) -----
Bug fixes:
	* Support markdown library discount version 3
	* Improve Vector BLF dependency (git download must be enabled if needed)
	* Correctly use system header of system QXlsx (BUG 468651)
	* Fix group separator problem in formulas (BUG 468098)
	* Improve log scales (auto scaling and tick number)
	* Improve auto scale (Issue #536)
	* Fix limits when changing scale (Issue #446)